--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <!--nav bar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light py-3 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 fixed-top">
       <div class="container">
         <img id="logo" src="img/logo.avif" alt="" />
         <button
@@ -105,7 +105,7 @@
     <section id="featured" class="my-5 pb-5">
         <div class="container text-center mt-5 py-5">
             <h3>Our Featured</h3>
-            <hr>
+            <hr class="mx-auto">
             <p>gfjhgj jhgujhg gjhk kgjyu jhhj hy h huyjy</p>
         </div>
         <div class="row mx-auto container-fluid">
@@ -163,6 +163,263 @@
             </div>
         </div>
     </section>
+
+    <section id="banner" class="my-5 py-5">
+        <div class="container">
+            <h4>MID SEASON'S SALE</h4>
+            <h1>Summer Collection<br>UP TO 20% OFF</h1>
+            <button class="text-uppercase">Shop Now</button>
+        </div>
+    </section>
+
+    <section id="footwear" class="my-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>Mens' Footwear</h3>
+            <hr class="mx-auto">
+            <p>gfjhgj jhgujhg gjhk kgjyu jhhj hy h huyjy</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="belts" class="my-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>Belts</h3>
+            <hr class="mx-auto">
+            <p>gfjhgj jhgujhg gjhk kgjyu jhhj hy h huyjy</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+
+    <section id="wallets" class="my-5 pb-5">
+        <div class="container text-center mt-5 py-5">
+            <h3>Wallets</h3>
+            <hr class="mx-auto">
+            <p>gfjhgj jhgujhg gjhk kgjyu jhhj hy h huyjy</p>
+        </div>
+        <div class="row mx-auto container-fluid">
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+            <div class="product text-center col-lg-3 col-md-4 col-12">
+                <img class="img-fluid mb-3" src="img/cassual-ladies-footwear.jpg" alt="">
+                <div class="star">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                </div>
+                <h5 class="p-name">Ladies wear</h5>
+                <h4 class="p-price">$92</h4>
+                <button class="buy-btn">Buy Now</button>
+            </div>
+        </div>
+    </section>
+
+    <footer class="mt-5 py-5">
+        <div class="row container mx-auto pt-5">
+            <div class="footer-one col-lg-3 col-md-6 col-12">
+                <img id="logo" src="img/logo.avif" alt="">
+                <p class="pt-3">hgfvdvfbg fghgfdfv fghnfgv fghfgdv dgfbv</p>
+            </div>
+            <div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+                <h5 class="pb-2">Featured</h5>
+                <ul class="text-uppercase list-unstyled">
+                    <li><a href="#">Men</a></li>
+                    <li><a href="#">New arrivals</a></li>
+                    <li><a href="#">Men</a></li>
+                    <li><a href="#">Men</a></li>
+                    <li><a href="#">Men</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-one col-lg-3 col-md-6 col-12 mb-3">
+                <h5 class="pb-2">Contact Us</h5>
+                <div>
+                    <h5 class="text-uppercase">Address</h5>
+                    <p>29/5, Matara, Sri Lanka</p>
+                </div>
+                <div>
+                    <h5 class="text-uppercase">Phone</h5>
+                    <p>0712772650</p>
+                </div>
+                <div>
+                    <h5 class="text-uppercase">email</h5>
+                    <p>hnanayakkara14@gmail.com</p>
+                </div>
+            </div>
+
+            <div class="footer-one col-lg-3 col-md-6 col-12">
+                <h5 class="pb-2">Instagram</h5>
+                <div class="row">
+                    <img class="img-fluid w-25 h-100 m-2" src="img/cassual-ladies-footwear.jpg" alt="">
+                    <img class="img-fluid w-25 h-100 m-2" src="img/cassual-ladies-footwear.jpg" alt="">
+                    <img class="img-fluid w-25 h-100 m-2" src="img/cassual-ladies-footwear.jpg" alt="">
+                    <img class="img-fluid w-25 h-100 m-2" src="img/cassual-ladies-footwear.jpg" alt="">
+                    <img class="img-fluid w-25 h-100 m-2" src="img/cassual-ladies-footwear.jpg" alt="">
+                    <img class="img-fluid w-25 h-100 m-2" src="img/cassual-ladies-footwear.jpg" alt="">
+                </div>
+            </div>
+        </div>
+
+        <div class="copyright mt-5">
+            <div class="row container mx-auto">
+                <div class="col-lg-3 col-md-6 col-12 mb-4">
+                    <img id="payment" src="img/cassual-ladies-footwear.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-12 text-nowrap mb-2">
+                    <p>sereppu 2023. All rights reserved</p>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
